<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:descendantFocusability="blocksDescendants">


    <ViewSwitcher
        android:id="@+id/viewSwitcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:inAnimation="@android:anim/slide_in_left"
        android:outAnimation="@android:anim/slide_out_right">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/authorName"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:paddingLeft="6dp"
                android:paddingRight="5dp"
                android:src="@drawable/ic_mood_black_24dp" />

            <TextView
                android:id="@+id/authorName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/avatar"
                android:layout_toStartOf="@+id/openOptions"
                android:paddingBottom="15dp"
                android:paddingStart="5dp"
                android:paddingTop="15dp"
                android:textColor="@color/colorAccent" />

            <ImageView
                android:id="@+id/openOptions"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/authorName"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/ic_more_vert_black_24dp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="15dp"
                android:text="@string/delete" />

            <TextView
                android:id="@+id/textYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="@string/yes" />

            <TextView
                android:id="@+id/textNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="@string/no" />


        </LinearLayout>

    </ViewSwitcher>

    <com.example.pawel.udemy_instagramclone.myImageGallery.CustomImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/viewSwitcher"
        android:contentDescription="@string/image"
        app:srcCompat="@drawable/ic_launcher_background" />


    <TextView
        android:id="@+id/authorC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/image"
        android:padding="8dp"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/Comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:layout_toEndOf="@+id/authorC"
        android:padding="8dp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/commentsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Comment"
        android:descendantFocusability="beforeDescendants"
        android:visibility="gone" />



    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/commentsList" />


</RelativeLayout>